GJør test grønn + refaktorering + fjern felle med hardkodede datoer som ville gjort tester røde i framtida